non-existing user login error message fix

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -728,6 +728,9 @@
 "into list" = "into list";
 
 /* No comment provided by engineer. */
+"Invalid Credentials." = "Invalid Credentials.";
+
+/* No comment provided by engineer. */
 "Invalid input entered, try again." = "Invalid input entered, try again.";
 
 /* No comment provided by engineer. */
