CATTY-14 implement basic structure of GoToBrick WIP
CATTY-14 implement default values in combobox and fix parsing and serialization for default values WIP

CATTY-14 implement serialization of not yet serialized sprite object WIP

CATTY-14 add commentedOut tag to GoToBrick

CATTY-14 add blackbox test for goToBrick, brick serialization still WIP

CATTY-14 fix parsing and serialization

CATTY-14 implement instructions of GoToBrick

CATTY-14 add correct implementation of touch position instruction

CATTY-14 add last changes to last touch position instruction

CATT-14 add missing parameter in CBScriptContext call in test files

CATTY-14 set position in instruction atomic

CATTY-14 add more cases in xml files & add brick in validProjectAllBricks file

CATTY-14 add unit test

CATTY-14 make requested changes

CATTY-14 fix access to objectList

CATTY-14 fix conflicts

CATTY-14 fix go to brick tests

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -680,6 +680,9 @@
 "Go back" = "Go back";
 
 /* No comment provided by engineer. */
+"Go to" = "Go to";
+
+/* No comment provided by engineer. */
 "Go to front" = "Go to front";
 
 /* paint */
@@ -1259,6 +1262,9 @@
 "Projects on device" = "Projects on device";
 
 /* No comment provided by engineer. */
+"random position" = "random position";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
 
 /* No comment provided by engineer. */
@@ -1656,6 +1662,9 @@
 
 /* No comment provided by engineer. */
 "Today" = "Today";
+
+/* No comment provided by engineer. */
+"touch position" = "touch position";
 
 /* No comment provided by engineer. */
 "transparency" = "transparency";
