--- a/src/Catty/Resources/Localization/af.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/af.lproj/Localizable.strings
@@ -58,6 +58,9 @@
 /* No comment provided by engineer. */
 "Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
 
+/* No comment provided by engineer. */
+"Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
+
 /* paint */
 "Alpha" = "Alpha";
 
@@ -425,6 +428,18 @@
 "direction" = "direction";
 
 /* No comment provided by engineer. */
+"Disable brick" = "Disable brick";
+
+/* No comment provided by engineer. */
+"Disable condition" = "Disable condition";
+
+/* No comment provided by engineer. */
+"Disable loop" = "Disable loop";
+
+/* No comment provided by engineer. */
+"Disable script" = "Disable script";
+
+/* No comment provided by engineer. */
 "Disagree" = "Disagree";
 
 /* No comment provided by engineer. */
@@ -510,6 +525,18 @@
 
 /* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
+"Enable brick" = "Enable brick";
+
+/* No comment provided by engineer. */
+"Enable condition" = "Enable condition";
+
+/* No comment provided by engineer. */
+"Enable loop" = "Enable loop";
+
+/* No comment provided by engineer. */
+"Enable script" = "Enable script";
 
 /* No comment provided by engineer. */
 "End if" = "End if";
@@ -998,9 +1025,6 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
-
-/* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "No or invalid image name entered, try again.";
 
 /* No comment provided by engineer. */
@@ -1353,6 +1377,9 @@
 
 /* bluetooth */
 "Select Phiro" = "Select Phiro";
+
+/* No comment provided by engineer. */
+"Sending anonymous crash reports" = "Sending anonymous crash reports";
 
 /* No comment provided by engineer. */
 "Sensors" = "Sensors";
