--- a/src/Catty/Resources/Localization/hr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/hr.lproj/Localizable.strings
@@ -58,6 +58,9 @@
 /* No comment provided by engineer. */
 "Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
 
+/* No comment provided by engineer. */
+"Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
+
 /* paint */
 "Alpha" = "Alfa";
 
@@ -425,6 +428,18 @@
 "direction" = "smjer";
 
 /* No comment provided by engineer. */
+"Disable brick" = "Disable brick";
+
+/* No comment provided by engineer. */
+"Disable condition" = "Disable condition";
+
+/* No comment provided by engineer. */
+"Disable loop" = "Disable loop";
+
+/* No comment provided by engineer. */
+"Disable script" = "Iskljuci skriptu";
+
+/* No comment provided by engineer. */
 "Disagree" = "Ne slažem se";
 
 /* No comment provided by engineer. */
@@ -510,6 +525,18 @@
 
 /* No comment provided by engineer. */
 "Empty input!" = "Prazan unos!";
+
+/* No comment provided by engineer. */
+"Enable brick" = "Enable brick";
+
+/* No comment provided by engineer. */
+"Enable condition" = "Enable condition";
+
+/* No comment provided by engineer. */
+"Enable loop" = "Enable loop";
+
+/* No comment provided by engineer. */
+"Enable script" = "Ukljuci skriptu";
 
 /* No comment provided by engineer. */
 "End if" = "Kraj je ako";
@@ -1350,6 +1377,9 @@
 
 /* bluetooth */
 "Select Phiro" = "Select Phiro";
+
+/* No comment provided by engineer. */
+"Sending anonymous crash reports" = "Sending anonymous crash reports";
 
 /* No comment provided by engineer. */
 "Sensors" = "Senzori";
