--- a/src/Catty/Resources/Localization/pt.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt.lproj/Localizable.strings
@@ -58,6 +58,9 @@
 /* No comment provided by engineer. */
 "Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
 
+/* No comment provided by engineer. */
+"Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
+
 /* paint */
 "Alpha" = "Alfa";
 
@@ -425,6 +428,18 @@
 "direction" = "direcção";
 
 /* No comment provided by engineer. */
+"Disable brick" = "Disable brick";
+
+/* No comment provided by engineer. */
+"Disable condition" = "Disable condition";
+
+/* No comment provided by engineer. */
+"Disable loop" = "Disable loop";
+
+/* No comment provided by engineer. */
+"Disable script" = "Disable script";
+
+/* No comment provided by engineer. */
 "Disagree" = "Discordar";
 
 /* No comment provided by engineer. */
@@ -510,6 +525,18 @@
 
 /* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
+"Enable brick" = "Enable brick";
+
+/* No comment provided by engineer. */
+"Enable condition" = "Enable condition";
+
+/* No comment provided by engineer. */
+"Enable loop" = "Enable loop";
+
+/* No comment provided by engineer. */
+"Enable script" = "Enable script";
 
 /* No comment provided by engineer. */
 "End if" = "Terminar Se";
@@ -1350,6 +1377,9 @@
 
 /* bluetooth */
 "Select Phiro" = "Seleccionar o Phiro";
+
+/* No comment provided by engineer. */
+"Sending anonymous crash reports" = "Enviar relatórios de acidente anônimo";
 
 /* No comment provided by engineer. */
 "Sensors" = "Sensores";
