--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -58,6 +58,9 @@
 /* No comment provided by engineer. */
 "Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
 
+/* No comment provided by engineer. */
+"Allow the app to send crash reports automatically" = "อนุญาตให้แอปส่งรายงานข้อขัดข้องโดยอัตโนมัติ";
+
 /* paint */
 "Alpha" = "ความโปร่งใส";
 
@@ -425,6 +428,18 @@
 "direction" = "ทิศทาง";
 
 /* No comment provided by engineer. */
+"Disable brick" = "Disable brick";
+
+/* No comment provided by engineer. */
+"Disable condition" = "Disable condition";
+
+/* No comment provided by engineer. */
+"Disable loop" = "Disable loop";
+
+/* No comment provided by engineer. */
+"Disable script" = "ปิดการใช้งานสคริปต์";
+
+/* No comment provided by engineer. */
 "Disagree" = "ไม่เห็นด้วย";
 
 /* No comment provided by engineer. */
@@ -510,6 +525,18 @@
 
 /* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
+"Enable brick" = "Enable brick";
+
+/* No comment provided by engineer. */
+"Enable condition" = "Enable condition";
+
+/* No comment provided by engineer. */
+"Enable loop" = "Enable loop";
+
+/* No comment provided by engineer. */
+"Enable script" = "เปิดใช้งานสคริปต์";
 
 /* No comment provided by engineer. */
 "End if" = "สิ้นสุดถ้า";
@@ -1350,6 +1377,9 @@
 
 /* bluetooth */
 "Select Phiro" = "Select Phiro";
+
+/* No comment provided by engineer. */
+"Sending anonymous crash reports" = "การส่งรายงานข้อผิดพลาดที่ไม่ระบุชื่อ";
 
 /* No comment provided by engineer. */
 "Sensors" = "เซนเซอร์";
