--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1118,6 +1118,12 @@
 "Passwords do not match" = "Passwords do not match";
 
 /* No comment provided by engineer. */
+"Pen" = "Pen";
+
+/* No comment provided by engineer. */
+"Pen down" = "Pen down";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
