CATTY-278 Implement PenUpBrick
- Implemented PenUpBrick, its instruction and serialization with tests.
- Implemented PenBrickCell

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1124,6 +1124,9 @@
 "Pen down" = "Pen down";
 
 /* No comment provided by engineer. */
+"Pen up" = "Pen up";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
