CATTY-279 Implement PenClearBrick
- Implemented PenClearBrick, its instruction and serialization with tests.
- Implemented PenClearBrickCell

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Choose image";
 
 /* No comment provided by engineer. */
+"Clear" = "Clear";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Clear graphic effects";
 
 /* No comment provided by engineer. */
