CATTY-319 Implement SetPenSizeBrick
- Implemented SetPenSizeBrick, its instruction and serialization with tests.
- Implemented SetPenSizeBrickCell

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1427,6 +1427,9 @@
 "Set description" = "Set description";
 
 /* No comment provided by engineer. */
+"Set pen size to" = "Set pen size to";
+
+/* No comment provided by engineer. */
 "Set Phiro light" = "Set Phiro light";
 
 /* No comment provided by engineer. */
