CATTY-346 Redesign Upload ViewController

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1379,6 +1379,9 @@
 "Select brick category" = "Select brick category";
 
 /* No comment provided by engineer. */
+"Select categories" = "Select categories";
+
+/* No comment provided by engineer. */
 "Select logical operator" = "Select logical operator";
 
 /* No comment provided by engineer. */
